<resources>
    <string name="app_name">NeoNasa</string>
    <string name="loading">Загрузка...</string>
    <string name="search">Поиск</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="close">Закрыть</string>
    <string name="settings">Настройки</string>
    <string name="home">Домой</string>
    <string name="theme">Оформление</string>
    <string name="star_sky">Звездное небо</string>
    <string name="snowflakes">Снежинки</string>
    <string name="photoday">Фото дня</string>
    <string name="earth">Земля</string>
    <string name="mars">Марс</string>
    <string name="photo">Фото</string>
    <string name="weather">Погода</string>
    <string name="asteroids">Астероиды</string>
    <string name="asteroid">Астероид</string>
    <string name="diameter">Расчетный диаметр от %.1f до %.1f м.</string>
    <string name="distance">Расстояние до Земли %,3d км.</string>
    <string name="see_on_site_nasa">Посмотреть на сайте NASA</string>
    <string name="priority">Приоритет</string>
    <string name="note">Заметка</string>
    <string name="more">… Ещё</string>
    <string name="item_deleted">Элемент был удалён</string>
    <string name="restore">Восстановить</string>
</resources>