<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/app_bar_day"
        android:icon="@drawable/ic_today"
        android:title="@string/photoday"
        app:showAsAction="always" />

    <item
        android:id="@+id/app_bar_earth"
        android:icon="@drawable/ic_earth"
        android:title="@string/earth"
        app:showAsAction="always" />

    <item
        android:id="@+id/app_bar_mars"
        android:icon="@drawable/ic_mars"
        android:title="@string/mars"
        app:showAsAction="always" />
</menu>
