<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/full_indent"
    android:layout_marginTop="@dimen/half_indent"
    android:layout_marginEnd="@dimen/full_indent"
    android:layout_marginBottom="@dimen/half_indent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/full_indent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label1"
            style="@style/NormalTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asteroid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvName"
            style="@style/SelectTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_indent"
            app:layout_constraintEnd_toStartOf="@id/barPriority"
            app:layout_constraintStart_toEndOf="@id/label1"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/barPriority"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="80dp"
            android:layout_height="16dp"
            android:max="10"
            android:progress="0"
            android:progressDrawable="@drawable/priority_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivDragHandle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/full_indent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barPriority"
            app:srcCompat="@drawable/ic_hamburger_menu" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/full_indent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivDragHandle"
            app:srcCompat="@drawable/ic_edit" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDiameter"
            style="@style/NormalTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/ivDragHandle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            tools:text="@string/diameter" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDistance"
            style="@style/NormalTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/ivDragHandle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDiameter"
            tools:text="@string/distance" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLink"
            style="@style/SelectTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_on_site_nasa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDistance" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvNote"
            style="@style/NormalTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/ivEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLink" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>