<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/full_indent"
    android:layout_marginTop="@dimen/half_indent"
    android:layout_marginEnd="@dimen/full_indent"
    android:layout_marginBottom="@dimen/half_indent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/full_indent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label1"
            style="@style/NormalTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asteroid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvName"
            style="@style/SelectTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_indent"
            app:layout_constraintStart_toEndOf="@id/label1"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label2"
            style="@style/NormalTextStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_indent"
            android:text="@string/priority"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/sbPriority"
            android:layout_width="190dp"
            android:layout_height="16dp"
            android:layout_marginStart="@dimen/full_indent"
            android:max="10"
            android:progressDrawable="@drawable/priority_bar"
            app:layout_constraintStart_toEndOf="@id/label2"
            app:layout_constraintTop_toTopOf="@id/label2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lNote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_indent"
            android:layout_marginEnd="@dimen/half_indent"
            android:hint="@string/note"
            app:counterEnabled="true"
            app:counterMaxLength="500"
            app:layout_constraintEnd_toStartOf="@id/ivDone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sbPriority">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textColor="?attr/colorOnPrimary" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_state"
            android:padding="@dimen/half_indent"
            app:layout_constraintBottom_toTopOf="@id/ivDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_close" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_state"
            android:padding="@dimen/half_indent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_done" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>